added effect to the footer.

--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -455,6 +455,28 @@ a.textInNavBar
 
 a.textInNavBar:hover
 {
-
     color: yellow;
+}
+
+a.hover-effects
+{
+    font-size: medium;
+
+}
+
+a.hover-effects:hover
+{
+    animation: 0.5s change-font-size forwards;
+}
+
+@keyframes change-font-size {
+    from
+    {
+        font-size: medium;
+
+    }
+    to
+    {
+        font-size: large;
+    }
 }
