--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -2,8 +2,8 @@
 html, body{
     margin: 0;
     padding: 0;
-    overflow-x: hidden !important;
     background-color: #121212;
+    overflow-x: hidden;
 }
 .index{
     background-size: cover;
@@ -110,6 +110,16 @@ html, body{
     }
 }
 
+h2 {
+    position: absolute;
+    text-align: center;
+    color: whitesmoke;
+    white-space: nowrap;
+    text-transform: uppercase;
+    font-family: "Georgia", serif;
+    font-size: 1.5rem;
+}
+
 .quote2{
     position: absolute;
     left: -100%;
@@ -127,7 +137,6 @@ html, body{
     position: absolute;
     right: -100%;
     margin-top: 5%;
-
     color: whitesmoke;
     overflow: hidden;
     transform: translateX(0);
@@ -163,11 +172,12 @@ html, body{
 
 }
 
-.quotes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
+.quotes {
+
+    height: 250px;
+    overflow: hidden;
+    margin-bottom: 0;
 }
 
 @keyframes flyInFromRight {
