--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -72,6 +72,10 @@ body {
     background-size: contain;
 }
 
+p{
+    color: white;
+}
+
 .homeButton-wrapper {
     width: 20px;  /* Erhöhe die Breite des Buttons */
     height: 20px; /* Erhöhe die Höhe des Buttons */
@@ -213,6 +217,99 @@ a.text-in-sidebar {
 }
 
 a.text-in-sidebar:hover {
+    background-position: right bottom;
+    color: black;
+}
+
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    border-bottom: 3px solid yellow;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Adjust content to both ends */
+    padding: 10px 20px;
+    z-index: 1000;
+}
+
+.logo-wrapper {
+    display: flex;
+    align-items: center;
+    margin-right: 1.5em;
+}
+
+.logo {
+    height: 3.5em;
+    width: 3.5em;
+}
+
+.menu-button {
+    font-size: 2.5em;
+    color: yellow;
+    cursor: pointer;
+}
+
+.menu-button-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
+}
+
+.title {
+    flex: 1;
+    text-align: center;
+    font-size: 28px;
+    color: yellow;
+    margin: 0;
+}
+
+/* Sidebar */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: black;
+    border-right: 3px solid yellow;
+    transition: transform 1s ease-in-out;
+    z-index: 999;
+}
+
+
+.menu-button:hover + .sidebar,
+.sidebar:hover {
+    transform: translateX(250px);
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-top: 60px;
+}
+
+.li-items-in-sidebar {
+    margin-left: 5%;
+}
+
+.text-in-sidebar {
+    color: white;
+    font-size: large;
+    font-family: Arial, serif;
+    background-image: linear-gradient(to left, yellow 50%, black 50%);
+    background-size: 200% 100%;
+    background-position: left bottom;
+    transition: background-position 1s ease, color 1s ease;
+    padding: 10px;
+    display: block;
+    text-decoration: none;
+}
+
+.text-in-sidebar:hover {
     background-position: right bottom;
     color: black;
 }
