minor changes to the titels

--- a/fitness-and-health-website/stylesheet-about-us.css
+++ b/fitness-and-health-website/stylesheet-about-us.css
@@ -171,7 +171,7 @@ td.heightAndWidthForTdInAboutUs
 .title {
     flex: 1;
     text-align: center;
-    font-size: 28px;
+    font-size: 3em;
     color: yellow;
     margin: 0;
 }
