--- a/fitness-and-health-website/shopping-basket.css
+++ b/fitness-and-health-website/shopping-basket.css
@@ -149,7 +149,7 @@ h1.header-in-shopping-basket
 .title {
     flex: 1;
     text-align: center;
-    font-size: 28px;
+    font-size: 3em;
     color: yellow;
     margin: 0;
 }
