--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -48,7 +48,7 @@ body {
 .title {
     flex: 1;
     text-align: center;
-    font-size: 28px;
+    font-size: 3em;
     color: yellow;
     margin: 0;
 }
