--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -119,13 +119,6 @@ p{
     border-radius: 10px;
 }
 
-#title {
-    font-size: 3.5rem;
-    color: yellow;
-    padding: 10px 20px;
-    margin-bottom: 30px;
-    border-bottom: 2px solid yellow;
-}
 
 .hero p {
     font-size: 1.5rem;
@@ -263,7 +256,7 @@ a.text-in-sidebar:hover {
 .title {
     flex: 1;
     text-align: center;
-    font-size: 40px;
+    font-size: 3em;
     color: yellow;
     margin: 0;
 }
