I pushed the same thing now the third time. Pls let it and dont change or overwrite it. Thanks

--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -369,7 +369,15 @@ a.styleForEmailInMain
 
 }
 
-
+.headerOfText{
+    color: bisque;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-bottom: 2%;
+    font-size: 1.5rem;
+    text-shadow: rgba(255, 255, 255, 0.8) 0px 0px 10px, rgba(255, 255, 255, 0.6) 0px 0px 20px;
+}
 
 
 .pictureContainer{
@@ -394,8 +402,8 @@ a.styleForEmailInMain
     z-index: 1000; /* Priorität vor anderen Elementen */
 }
 .pictureOfMan{
-    margin-top: 20%;
-    width: 45%;
+    margin-top: 5%;
+    width: 50%;
     left: 50%;
     border-radius: 30% 70% 70% 30% / 30% 22% 78% 70%;
     opacity: 0.8;
@@ -419,17 +427,8 @@ a.styleForEmailInMain
     font-size: 2.01rem;
 }
 .textContent{
-    display: flex;
-    flex-direction: column;
-    margin-top: 7%;
-    border: 1px solid black;
-    margin-left: 5%;
-    margin-right: 3%;
-
-    background-color: darkgray;
-    border-radius: 20px;
-    overflow: visible;
-    word-wrap: break-word;
+    margin-top: 8%;
+    font-size: 110%;
     
 
 }
