--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -47,7 +47,7 @@ html, body{
     overflow: hidden;
     z-index: 1;
 }
-
+/*
 .MainPage::after
 {
     content: "";
@@ -57,13 +57,13 @@ html, body{
     width: 100%;
     height: 100%;
     background-position: center;
-    background-image: url("icones/oldman2.0.jpg");
+    background-image: url("icones/pushup.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     z-index: -1;
     opacity: 0.7;
 }
-
+*/
 .headersTop{
     color: yellow;
     font-weight: bold;
