--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -105,7 +105,7 @@ html, body{
     padding-top: 8%;
     text-align: center;
     color: yellow;
-    text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
+    // text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
     text-transform: uppercase;
     font-size: 300%;
     font-weight: bold;
