--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -46,6 +46,8 @@ html, body{
     position: relative;
     overflow: hidden;
     z-index: 1;
+    background-color: black;
+
 }
 /*
 .MainPage::after
@@ -104,12 +106,12 @@ html, body{
 
     padding-top: 8%;
     text-align: center;
-    color: yellow;
-    // text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
+    color: #dad2bc;
+    // text-shadow: 2px 2px 5px ;
     text-transform: uppercase;
     font-size: 300%;
     font-weight: bold;
-
+    font-family: 'Quicksand', 'Arial', sans-serif;
     <!--animation: flyIn 2s ease-out forwards;-->
 }
 
