Now pushed final color

--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -106,7 +106,7 @@ html, body{
 
     padding-top: 8%;
     text-align: center;
-    color: #dad2bc;
+    color: #118ab2;
     // text-shadow: 2px 2px 5px ;
     text-transform: uppercase;
     font-size: 300%;
