--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -82,18 +82,36 @@ body {
 .li-items-in-sidebar {
     margin-left: 5%;
 }
+
+.changeColor{
+    filter: invert(1);
+}
 a.textInNavBar
 {
     color: white;
     font-size: large;
-    transition: color 1s ease-in-out;
+
+
 }
-.changeColor{
-    filter: invert(1);
+
+@keyframes transition-color-in-nav {
+    from
+    {
+        background: black;
+
+    }
+    to
+    {
+        background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
+        -webkit-background-clip: text; /* Clippt den Hintergrund auf den Text */
+        -webkit-text-fill-color: transparent; /* Macht den Text selbst transparent */
+    }
+
 }
+
 a.textInNavBar:hover
 {
-    color: #118ab2;
+    animation: 0.5s transition-color-in-nav forwards;
 }
 a.hover-effects
 {
