change the color of every footer and added the home button to the nav bar

--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -212,3 +212,10 @@ a.hover-effects:hover
         font-size: large;
     }
 }
+
+h5.text-in-fotter
+{
+    background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
+    -webkit-background-clip: text; /* Clippt den Hintergrund auf den Text */
+    -webkit-text-fill-color: transparent; /* Macht den Text selbst transparent */
+}
