added the gradient to the hover effects on the picture in the about us page

--- a/fitness-and-health-website/stylesheet-about-us.css
+++ b/fitness-and-health-website/stylesheet-about-us.css
@@ -44,7 +44,9 @@ button.styleForButtonInAboutUsRight
 }
 button.styleForButtonInAboutUsLeft:hover, button.styleForButtonInAboutUsRight:hover
 {
-    border: 3px solid #118ab2;
+    border: 3px solid #AFD9FE;
+
+
 }
 
 p.styleForPInAboutUs
