--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -55,12 +55,6 @@ html, body{
 
 }
 
-.image-container{
-    position: relative;
-    width: 100%;
-    display: inline-block;
-    text-align: center;
-}
 .headersTop{
     color: yellow;
     font-weight: bold;
@@ -97,6 +91,7 @@ html, body{
     text-align: center;
     color: white;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    opacity: 1;
 
 }
 .navbar-fixed {
@@ -107,7 +102,7 @@ html, body{
 }
 .picture-header{
     font-size: 4rem !important;
-    color: yellow;
+    color:#BDE0FE;
 
 }
 
@@ -382,4 +377,19 @@ a.hover-effects
 {
     font-size: medium;
 
+}
+.full-width-carousel {
+    width: 100%;
+
+}
+
+.carousel-inner .carousel-item .img {
+    opacity: 0.7; /* Set opacity */
+    width: 100%;
+    height: 100%;
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
 }
