--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -1,9 +1,11 @@
-/* General Styles */
+
+
 body {
+    font-family: Arial, sans-serif;
     background-color: black;
-    font-family: Arial, serif;
     margin: 0;
     padding: 0;
+    color: #A2D2FF;
 }
 
 
@@ -24,7 +26,7 @@ a.textInNavBar
     }
     to
     {
-        background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
+            background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
         -webkit-background-clip: text; /* Clippt den Hintergrund auf den Text */
         -webkit-text-fill-color: transparent; /* Macht den Text selbst transparent */
     }
@@ -87,7 +89,55 @@ a.hover-effects:hover
 
 h5.text-in-fotter
 {
-    background: linear-gradient(90deg, #A2D2FF, #BDE0FE); /* Gradient-Farben */
-    -webkit-background-clip: text; /* Clippt den Hintergrund auf den Text */
-    -webkit-text-fill-color: transparent; /* Macht den Text selbst transparent */
+    background: linear-gradient(90deg, #A2D2FF, #BDE0FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.nav-link {
+    color: #A2D2FF;
+}
+
+.nav-link.active {
+    text-decoration: underline;
+}
+
+h1, h2 {
+    font-weight: bold;
+}
+
+.card {
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+
+.table {
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.title {
+    font-family: 'Quicksand', 'Arial', sans-serif;
+    color: #A2D2FF;
+}
+
+.card th, .card td {
+    border: 1px solid #ddd;
+    padding: 10px;
+}
+
+.card th {
+    background-color: #A2D2FF;
+    color: white;
+}
+
+.card .table-striped tbody tr:nth-of-type(odd) {
+    background-color: #2f2f2f;
 }
