--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -3,7 +3,7 @@ html, body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: #121212;
+    background-color: black;
 }
 
 .custom-container{
@@ -25,9 +25,10 @@ html, body{
 
 }
 .top-search-products{
+
     display: flex;
     flex-direction: column;
-
+    background-color: black;
 }
 
 .MainPage{
