--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -2,11 +2,12 @@
 html, body{
     margin: 0;
     padding: 0;
-    background-color: #121212;
+    background-color: black;
     overflow-x: hidden;
 }
 .index{
     background-size: cover;
+    background-color: black;
 }
 
 * {
