--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: merriweather,sans-serif;
     background-color: black;
     margin: 0;
     padding: 0;
@@ -145,4 +146,31 @@ h1, h2 {
 h1.title-nutrition
 {
     font-size: xxx-large;
+}
+
+
+.form-container {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.explanation-container {
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn-custom {
+    background-color: #BDE0FE;
+    color: #000;
+}
+
+.btn-custom:hover {
+    background-color: #A9D0F8;
+}
+
+.list-group-item {
+    border: none;
 }
