--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
+
 body {
     background-color: black;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: merriweather, sans-serif;
     color: white;
 }
 
