--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 html, body{
     margin: 0;
     padding: 0;
     background-color: black;
     overflow-x: hidden;
+    font-family: merriweather, sans-serif;
 }
 .index{
     background-size: cover;
