--- a/fitness-and-health-website/stylesheet-shop.css
+++ b/fitness-and-health-website/stylesheet-shop.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 html, body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     background-color: black;
+    font-family: Merriweather, sans-serif;
 }
 
 .custom-container{
@@ -72,7 +74,7 @@ html, body{
     object-fit: cover;
     display: block;
     margin: 0 auto;
-    margin-top: 9%;
+    margin-top: 2%;
     border-radius: 3%;
 }
 
