--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -12,6 +12,7 @@ body {
     background-color: black;
     text-align: center;
     color: white;
+    border-radius: 20px;
     width: 30rem;
     height: 20rem;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -117,14 +118,20 @@ p {
 }
 
 .hero {
+    font-size: 3rem;
     color: #A2D2FF;
     text-align: center;
-    border-radius: 10px;
     margin-bottom: 7%;
 }
 
+.hero h1 {
+    font-size: 3.5rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
 .hero p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: white;
     margin: 0;
 }
@@ -240,7 +247,6 @@ footer.footer p {
 .title {
     flex: 1;
     text-align: center;
-    font-size: 3em;
     color: #A2D2FF;
     margin: 0;
 }
