aligned the navbar text to the center

--- a/fitness-and-health-website/stylesheet-about-us.css
+++ b/fitness-and-health-website/stylesheet-about-us.css
@@ -15,7 +15,23 @@ img.styleForImgInAboutUs
     margin: 0;
 }
 
+@media (max-width: 768px) {
+    .form-container, .explanation-container {
+        margin-bottom: 20px;
+    }
 
+    h1.title-nutrition {
+        font-size: 2rem;
+    }
+
+    .lead {
+        font-size: 1rem;
+    }
+
+    .navbar-nav {
+        text-align: center;
+    }
+}
 
 button.styleForButtonInAboutUsLeft
 {
