--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -9,7 +9,7 @@ body {
 
 .card {
     border: 2px solid #A2D2FF;
-    background-color: black;
+    background-color: #2f2f2f;
     text-align: center;
     color: white;
     border-radius: 20px;
@@ -20,6 +20,7 @@ body {
 
 .card .card-title {
     font-size: 2rem;
+    font-weight: bold;
 }
 
 .changeColor{
@@ -34,6 +35,30 @@ a.textInNavBar {
 
 a.textInNavBar:hover {
     color: #A2D2FF;
+}
+
+.navbar-fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Priorität vor anderen Elementen */
+}
+@media (max-width: 768px) {
+    .form-container, .explanation-container {
+        margin-bottom: 20px;
+    }
+
+    h1.title-nutrition {
+        font-size: 2rem;
+    }
+
+    .lead {
+        font-size: 1rem;
+    }
+
+    .navbar-nav {
+        text-align: center;
+    }
 }
 
 a.hover-effects {
@@ -112,7 +137,7 @@ p {
 
 .content {
     padding: 20px;
-    max-width: 80%;
+    max-width: 90%;
     margin: 0 auto;
     margin-top: 4%;
 }
@@ -125,6 +150,7 @@ p {
 }
 
 .hero h1 {
+    margin-top: 2.5rem;
     font-size: 3.5rem;
     font-weight: bold;
     margin-bottom: 2rem;
@@ -133,7 +159,6 @@ p {
 .hero p {
     font-size: 1.2rem;
     color: white;
-    margin: 0;
 }
 
 .plans {
@@ -143,7 +168,7 @@ p {
 .plans h2 {
     font-size: 2rem;
     color: #A2D2FF;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-bottom: 2px solid #A2D2FF;
 }
 
