--- a/fitness-and-health-website/stylesheet-training-plan-subpages.css
+++ b/fitness-and-health-website/stylesheet-training-plan-subpages.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
-/* Global Styles */
 body {
-    font-family: 'Merriweather', sans-serif;
     background-color: black;
     margin: 0;
-    padding: 0;
+    font-family: merriweather, sans-serif;
+    color: white;
+}
+.hero h1 {
+    font-family: 'Merriweather', sans-serif;
+    text-align: center;
     color: #A2D2FF;
 }
-
 .changeColor {
     filter: invert(1);
 }
