Added hover effects in the footer

--- a/fitness-and-health-website/stylesheet-nutrition.css
+++ b/fitness-and-health-website/stylesheet-nutrition.css
@@ -153,3 +153,27 @@ footer a:hover {
     word-break: break-word;
     min-width: 100%;
 }
+
+
+a.hover-effects
+{
+    font-size: medium;
+
+}
+
+a.hover-effects:hover
+{
+    animation: 0.5s change-font-size forwards;
+}
+
+@keyframes change-font-size {
+    from
+    {
+        font-size: medium;
+
+    }
+    to
+    {
+        font-size: large;
+    }
+}
