--- a/fitness-and-health-website/stylesheet-training-plans.css
+++ b/fitness-and-health-website/stylesheet-training-plans.css
@@ -286,3 +286,27 @@ h5.text-in-fotter {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+
+a.hover-effects
+{
+    font-size: medium;
+
+}
+
+a.hover-effects:hover
+{
+    animation: 0.5s change-font-size forwards;
+}
+
+@keyframes change-font-size {
+    from
+    {
+        font-size: medium;
+
+    }
+    to
+    {
+        font-size: large;
+    }
+}
